# Thamur

./: .gitignore  Cargo.toml  README.md  config.json  storage_config.json
src/: config.rs  error.rs  lib.rs  limiter.rs  main.rs  robot.rs  state.rs  storage.rs  task.rs  thread.rs  validator.rs
src/modules/fetcher/: client.rs  mod.rs
src/modules/parser/: mod.rs  parser.rs
src/modules/storage/: mod.rs  state.rs
src/modules/utils/: mod.rs
