[package]
name = "multi_threaded_web_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
crossbeam = "0.8.4"
dashmap = "6.1.0"
flume = "0.11.1"
futures = "0.3.31"
idna = "1.0.3"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
select = "0.6.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_derive = "1.0.218"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
tracing = "0.1.41"
url = "2.5.4"
validator = "0.20.0"
[lib]
name = "crawler"
path = "src/lib.rs"
